## Copyright (c) 2007
## The gtkmm development team.

sublib_name = giomm
sublib_namespace = Gio
sublib_parentdir = gio
files_defs = gio.defs gio_methods.defs gio_signals.defs gio_enums.defs \
             gio_docs.xml gio_docs_override.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

